Minor commands improvements